--- a/web/fes_visitor/templates/select_page.html
+++ b/web/fes_visitor/templates/select_page.html
@@ -18,9 +18,10 @@
                     지역축제이름  <br>          
                         <select name="fes_name" style="width:176px;height:52px;">
                             <option value="">축제선택</option>
+                            <option value="강진청자축제">강진청자축제</option>
                             <option value="광안리어방축제">광안리어방축제</option>
-                            <option value="강경젓갈축제">강경젓갈축제</option>
-                            <option value="기타">기타</option>
+                            <option value="대구약령시한방문화축제">대구약령시한방문화축제</option>
+                            <option value="무주반딧불축제">무주반딧불축제</option>
                         </select>
                     </div>
                     <div>
